--- a/assets/sass/pages/_wrapper.scss
+++ b/assets/sass/pages/_wrapper.scss
@@ -28,28 +28,50 @@ $grid_max: $grid_max_width + $grid_max_unit;
   @media only screen and (max-width: 769px) {
       grid-template-columns: minmax(0, $grid_main_main) minmax(0, $grid_main_side);
   }
-  
+
+//// BEGIN
+// 2-REC: no data-pad
+//  &__left {
+//    position: fixed;
+//    top: 0;
+//    left: -0.5rem;
+//    height: 100vh;
+//    width: calc((100vw - #{$grid_max}) / 2);
+//
+//    &[data-pad="false"] {
+//      left: 0;
+//    }
+//  }
+//// MID
   &__left {
     position: fixed;
     top: 0;
-    left: -0.5rem;
+    left: 0;
     height: 100vh;
-    width: calc((100vw - #{$grid_max}) / 2);
-
-    &[data-pad="false"] {
-      left: 0;
-    }
+    width: calc((100% - #{$grid_max}) / 2);
   }
+//// END
 
+//// BEGIN
+// 2-REC: no data-pad
+//  &__right {
+//    position: fixed;
+//    top: 0;
+//    right: -0.5rem;
+//    height: 100vh;
+//    width: calc((100vw - #{$grid_max}) / 2);
+//
+//    &[data-pad="false"] {
+//      right: 0;
+//    }
+//  }
+//// MID
   &__right {
     position: fixed;
     top: 0;
-    right: -0.5rem;
+    right: 0;
     height: 100vh;
-    width: calc((100vw - #{$grid_max}) / 2);
-
-    &[data-pad="false"] {
-      right: 0;
-    }
+    width: calc((100% - #{$grid_max}) / 2);
   }
+//// END
 }
